--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hugeicons: ^1.1.1
   google_fonts: ^6.3.2
   go_router: ^17.0.0
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
